--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@mui/styles": "^6.4.12",
     "@mui/system": "^7.1.1",
     "cookie": "^1.0.2",
+    "echarts": "^5.6.0",
     "js-cookie": "^3.0.5",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -42,6 +45,9 @@
     "typescript": "^5"
   },
   "lint-staged": {
-  "*.{ts,tsx,js,jsx}": ["eslint --fix", "prettier --write"]
-}
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  }
 }
